Bug 317780 - KMail crash trying to Clone or Create new Theme
Summary: KMail crash trying to Clone or Create new Theme
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.10.1
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-03 12:36 UTC by Giuseppe Roberti
Modified: 2013-04-03 13:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Giuseppe Roberti 2013-04-03 12:36:53 UTC
Application: kmail (4.10.1)
KDE Platform Version: 4.10.1
Qt Version: 4.8.4
Operating System: Linux 3.8.4-202.fc18.x86_64 x86_64
Distribution: "Fedora release 18 (Spherical Cow)"

-- Information about the crash:
- What I was doing when the application crashed:

Open KMail
Go to View => Message List => Theme => Configure
Click "Clone Theme" or "New Theme"
Click on the theme just created (*)
Click "Delete Theme" (*)

(*) you can invert this operation and KMail still crash

The crash can be reproduced sometimes.

-- Backtrace:
Application: KMail (kmail), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f0edbfe9880 (LWP 11545))]

Thread 3 (Thread 0x7f0ec730d700 (LWP 1613)):
#0  0x0000003d1340b5e5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x0000003d3da169bd in WTF::TCMalloc_PageHeap::scavengerThread() () from /lib64/libQtWebKit.so.4
#2  0x0000003d3da16ac9 in WTF::TCMalloc_PageHeap::runScavengerThread(void*) () from /lib64/libQtWebKit.so.4
#3  0x0000003d13407d15 in start_thread () from /lib64/libpthread.so.0
#4  0x0000003d12cf248d in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7f0ec6a0c700 (LWP 1614)):
#0  0x0000003d13409bb1 in pthread_mutex_lock () from /lib64/libpthread.so.0
#1  0x0000003d14884da1 in g_mutex_lock () from /lib64/libglib-2.0.so.0
#2  0x0000003d14847837 in g_main_context_check () from /lib64/libglib-2.0.so.0
#3  0x0000003d14847cc2 in g_main_context_iterate.isra.24 () from /lib64/libglib-2.0.so.0
#4  0x0000003d14847e44 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#5  0x0000003d195a6126 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQtCore.so.4
#6  0x0000003d1957680f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQtCore.so.4
#7  0x0000003d19576a98 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQtCore.so.4
#8  0x0000003d19478980 in QThread::exec() () from /lib64/libQtCore.so.4
#9  0x0000003d1947b95c in QThreadPrivate::start(void*) () from /lib64/libQtCore.so.4
#10 0x0000003d13407d15 in start_thread () from /lib64/libpthread.so.0
#11 0x0000003d12cf248d in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7f0edbfe9880 (LWP 11545)):
[KCrash Handler]
#5  0x0000003d4126dad7 in MessageList::Core::ThemeDelegate::paint(QPainter*, QStyleOptionViewItem const&, QModelIndex const&) const () from /lib64/libmessagelist.so.4
#6  0x0000003d1b90f2a3 in QTreeView::drawRow(QPainter*, QStyleOptionViewItem const&, QModelIndex const&) const () from /lib64/libQtGui.so.4
#7  0x0000003d1b913b7f in QTreeView::drawTree(QPainter*, QRegion const&) const () from /lib64/libQtGui.so.4
#8  0x0000003d1b91437c in QTreeView::paintEvent(QPaintEvent*) () from /lib64/libQtGui.so.4
#9  0x0000003d4128e61d in MessageList::Utils::ThemePreviewWidget::paintEvent(QPaintEvent*) () from /lib64/libmessagelist.so.4
#10 0x0000003d1b419efe in QWidget::event(QEvent*) () from /lib64/libQtGui.so.4
#11 0x0000003d1b7c49f6 in QFrame::event(QEvent*) () from /lib64/libQtGui.so.4
#12 0x0000003d1b8d020b in QAbstractItemView::viewportEvent(QEvent*) () from /lib64/libQtGui.so.4
#13 0x0000003d1b914a91 in QTreeView::viewportEvent(QEvent*) () from /lib64/libQtGui.so.4
#14 0x0000003d19577c26 in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /lib64/libQtCore.so.4
#15 0x0000003d1b3ca59c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib64/libQtGui.so.4
#16 0x0000003d1b3cea4a in QApplication::notify(QObject*, QEvent*) () from /lib64/libQtGui.so.4
#17 0x0000003d22c473c6 in KApplication::notify(QObject*, QEvent*) () from /lib64/libkdeui.so.5
#18 0x0000003d19577abe in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /lib64/libQtCore.so.4
#19 0x0000003d1b415ac4 in QWidgetPrivate::drawWidget(QPaintDevice*, QRegion const&, QPoint const&, int, QPainter*, QWidgetBackingStore*) () from /lib64/libQtGui.so.4
#20 0x0000003d1b4165bf in QWidgetPrivate::paintSiblingsRecursive(QPaintDevice*, QList<QObject*> const&, int, QRegion const&, QPoint const&, int, QPainter*, QWidgetBackingStore*) () from /lib64/libQtGui.so.4
#21 0x0000003d1b416404 in QWidgetPrivate::paintSiblingsRecursive(QPaintDevice*, QList<QObject*> const&, int, QRegion const&, QPoint const&, int, QPainter*, QWidgetBackingStore*) () from /lib64/libQtGui.so.4
#22 0x0000003d1b416404 in QWidgetPrivate::paintSiblingsRecursive(QPaintDevice*, QList<QObject*> const&, int, QRegion const&, QPoint const&, int, QPainter*, QWidgetBackingStore*) () from /lib64/libQtGui.so.4
#23 0x0000003d1b416404 in QWidgetPrivate::paintSiblingsRecursive(QPaintDevice*, QList<QObject*> const&, int, QRegion const&, QPoint const&, int, QPainter*, QWidgetBackingStore*) () from /lib64/libQtGui.so.4
#24 0x0000003d1b416404 in QWidgetPrivate::paintSiblingsRecursive(QPaintDevice*, QList<QObject*> const&, int, QRegion const&, QPoint const&, int, QPainter*, QWidgetBackingStore*) () from /lib64/libQtGui.so.4
#25 0x0000003d1b416404 in QWidgetPrivate::paintSiblingsRecursive(QPaintDevice*, QList<QObject*> const&, int, QRegion const&, QPoint const&, int, QPainter*, QWidgetBackingStore*) () from /lib64/libQtGui.so.4
#26 0x0000003d1b415655 in QWidgetPrivate::drawWidget(QPaintDevice*, QRegion const&, QPoint const&, int, QPainter*, QWidgetBackingStore*) () from /lib64/libQtGui.so.4
#27 0x0000003d1b4165bf in QWidgetPrivate::paintSiblingsRecursive(QPaintDevice*, QList<QObject*> const&, int, QRegion const&, QPoint const&, int, QPainter*, QWidgetBackingStore*) () from /lib64/libQtGui.so.4
#28 0x0000003d1b416404 in QWidgetPrivate::paintSiblingsRecursive(QPaintDevice*, QList<QObject*> const&, int, QRegion const&, QPoint const&, int, QPainter*, QWidgetBackingStore*) () from /lib64/libQtGui.so.4
#29 0x0000003d1b415655 in QWidgetPrivate::drawWidget(QPaintDevice*, QRegion const&, QPoint const&, int, QPainter*, QWidgetBackingStore*) () from /lib64/libQtGui.so.4
#30 0x0000003d1b4165bf in QWidgetPrivate::paintSiblingsRecursive(QPaintDevice*, QList<QObject*> const&, int, QRegion const&, QPoint const&, int, QPainter*, QWidgetBackingStore*) () from /lib64/libQtGui.so.4
#31 0x0000003d1b415655 in QWidgetPrivate::drawWidget(QPaintDevice*, QRegion const&, QPoint const&, int, QPainter*, QWidgetBackingStore*) () from /lib64/libQtGui.so.4
#32 0x0000003d1b4165bf in QWidgetPrivate::paintSiblingsRecursive(QPaintDevice*, QList<QObject*> const&, int, QRegion const&, QPoint const&, int, QPainter*, QWidgetBackingStore*) () from /lib64/libQtGui.so.4
#33 0x0000003d1b416404 in QWidgetPrivate::paintSiblingsRecursive(QPaintDevice*, QList<QObject*> const&, int, QRegion const&, QPoint const&, int, QPainter*, QWidgetBackingStore*) () from /lib64/libQtGui.so.4
#34 0x0000003d1b415655 in QWidgetPrivate::drawWidget(QPaintDevice*, QRegion const&, QPoint const&, int, QPainter*, QWidgetBackingStore*) () from /lib64/libQtGui.so.4
#35 0x0000003d1b4165bf in QWidgetPrivate::paintSiblingsRecursive(QPaintDevice*, QList<QObject*> const&, int, QRegion const&, QPoint const&, int, QPainter*, QWidgetBackingStore*) () from /lib64/libQtGui.so.4
#36 0x0000003d1b415655 in QWidgetPrivate::drawWidget(QPaintDevice*, QRegion const&, QPoint const&, int, QPainter*, QWidgetBackingStore*) () from /lib64/libQtGui.so.4
#37 0x0000003d1b4165bf in QWidgetPrivate::paintSiblingsRecursive(QPaintDevice*, QList<QObject*> const&, int, QRegion const&, QPoint const&, int, QPainter*, QWidgetBackingStore*) () from /lib64/libQtGui.so.4
#38 0x0000003d1b415655 in QWidgetPrivate::drawWidget(QPaintDevice*, QRegion const&, QPoint const&, int, QPainter*, QWidgetBackingStore*) () from /lib64/libQtGui.so.4
#39 0x0000003d1b5dfde8 in QWidgetBackingStore::sync() () from /lib64/libQtGui.so.4
#40 0x0000003d1b40a5f0 in QWidgetPrivate::syncBackingStore() () from /lib64/libQtGui.so.4
#41 0x0000003d1b41a3a4 in QWidget::event(QEvent*) () from /lib64/libQtGui.so.4
#42 0x0000003d1b3ca5cc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib64/libQtGui.so.4
#43 0x0000003d1b3cea4a in QApplication::notify(QObject*, QEvent*) () from /lib64/libQtGui.so.4
#44 0x0000003d22c473c6 in KApplication::notify(QObject*, QEvent*) () from /lib64/libkdeui.so.5
#45 0x0000003d19577abe in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /lib64/libQtCore.so.4
#46 0x0000003d1957b571 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /lib64/libQtCore.so.4
#47 0x0000003d195a5f73 in postEventSourceDispatch(_GSource*, int (*)(void*), void*) () from /lib64/libQtCore.so.4
#48 0x0000003d14847a55 in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#49 0x0000003d14847d88 in g_main_context_iterate.isra.24 () from /lib64/libglib-2.0.so.0
#50 0x0000003d14847e44 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#51 0x0000003d195a6106 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQtCore.so.4
#52 0x0000003d1b46a73e in QGuiEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQtGui.so.4
#53 0x0000003d1957680f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQtCore.so.4
#54 0x0000003d19576a98 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQtCore.so.4
#55 0x0000003d1957b888 in QCoreApplication::exec() () from /lib64/libQtCore.so.4
#56 0x0000000000402ded in main ()

Possible duplicates by query: bug 293075, bug 276548.

Reported using DrKonqi
Comment 1 Laurent Montel 2013-04-03 13:23:27 UTC
Git commit dfac47cb284ffe7e97a99670b890ed8e4c4d4416 by Montel Laurent.
Committed on 03/04/2013 at 15:22.
Pushed by mlaurent into branch 'KDE/4.10'.

Fix Bug 317780 - KMail crash trying to Clone or Create new Theme

FIXED-IN: 4.10.3

M  +4    -3    messagelist/utils/themeeditor.cpp

http://commits.kde.org/kdepim/dfac47cb284ffe7e97a99670b890ed8e4c4d4416