Fix Bug 317780 - KMail crash trying to Clone or Create new Theme

FIXED-IN: 4.10.3
BUG: 317780